[package]
name = "mdbook-multicode"
version = "0.1.0"
edition = "2021"
description = "Allows you to give multilanguage code examples, toggled by a spinner"
license = "Zlib"

[lib]
name = "mdbook_multicode"
path = "src/lib.rs"

[[bin]]
name = "mdbook-multicode"
path = "bin/mdbook-multicode.rs"

[dependencies]
anyhow = "1.0"
clap = "4.0"
mdbook = "0.4"
regex = "1.0"
semver = "1.0"
serde_json = "1.0"
